Starting drafting a UI in WPF. Honestly, it's like the Wild West right now.

--- a/CrapsTableWPF/CrapsTableWPF.csproj
+++ b/CrapsTableWPF/CrapsTableWPF.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="temp_background.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CrapsLibrary\CrapsLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="temp_background.png" />
   </ItemGroup>
 
 </Project>
