--- a/CrapsTableWPF/CrapsTableWPF.csproj
+++ b/CrapsTableWPF/CrapsTableWPF.csproj
@@ -9,7 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="background.svg" />
     <None Remove="temp_background.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SharpVectors" Version="1.8.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="background.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Resource Include="temp_background.png" />
   </ItemGroup>
 
